--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.6",
