--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-slick": "^0.23.13",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
@@ -19,7 +20,9 @@
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.10"
   },
